--- a/Carflix/Views/Shared/_Layout.cshtml
+++ b/Carflix/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ConsultaCep" asp-action="Index">Consulta CEP</a>
                         </li>
                     </ul>
                 </div>
