--- a/Carflix/Views/ConsultaCep/_CepResultado.cshtml
+++ b/Carflix/Views/ConsultaCep/_CepResultado.cshtml
@@ -1,63 +1,63 @@
 ﻿@model Carflix.ViewModels.ViaCepResponse
 
-<h2>CEP</h2>
-<div>
-    <h4>@Model.Cep</h4>
-    <hr />
-    <dl>
-        <dt>
-            @Html.DisplayNameFor(model => model.Logradouro)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Logradouro)
-        </dd>
+    <form asp-controller="ConsultaCep" asp-action="Cadastrar"
+          method="POST"
+          data-ajax-method="POST"
+          data-ajax="true"
+          data-ajax-mode="replace"
+          data-ajax-update="#ResultadoConsulta">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Complemento)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Complemento)
-        </dd>
+        <h2>CEP</h2>
+        <div>
+            <h4>@Model.Cep</h4>
+            <hr />
+            <dl>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Bairro)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Bairro)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Logradouro)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Localidade)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Localidade)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Complemento)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Complemento)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Uf)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Uf)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Bairro)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Bairro)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Ibge)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Ibge)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Localidade)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Localidade)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Gia)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Gia)
-        </dd>
-    </dl>
-</div>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Uf)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Uf)
+                </dd>
 
+                <dt>
+                    @Html.DisplayNameFor(model => model.Ibge)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Ibge)
+                </dd>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Gia)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Gia)
+                </dd>
+            </dl>
+        </div>
+    </form>
