--- a/Carflix/Views/Home/Index.cshtml
+++ b/Carflix/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Carflix</h1>
+    <p>Saber mais<a href="https://www.carflix.com.br/"> - Vender e comprar seu carro sem sair de casa.</a>.</p>
 </div>
