--- a/Carflix/Views/ConsultaCep/Index.cshtml
+++ b/Carflix/Views/ConsultaCep/Index.cshtml
@@ -20,7 +20,7 @@
         <div class="col-lg-12">
             <div class="btn-group">
                 <button class="btn btn-secondary" type="submit">
-                    Consultar CEP
+                    Consultar e cadastrar CEP
                 </button>
             </div>
         </div>
@@ -34,4 +34,7 @@
 </div>
 <script src="~/lib/jquery/dist/jquery.js"></script>
 <script src="~/lib/jquery.unobtrusive-ajax/jquery.unobtrusive-ajax.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
+<script>
+    $('#Cep').mask('99999-999');
+</script>
