consulta e save dos dados ok

--- a/Carflix/Views/ConsultaCep/Index.cshtml
+++ b/Carflix/Views/ConsultaCep/Index.cshtml
@@ -19,8 +19,11 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="btn-group">
-                <button class="btn btn-secondary" type="submit">
+                <button class="btn btn-secondary" type="submit" value="CadastrarNovoCep" name="value" id="Cadastrar">
                     Consultar e cadastrar CEP
+                </button>
+                <button class="btn btn-secondary" type="submit" value="ConsultarNovoCep" name="value" id="Consultar">
+                    Consultar apenas
                 </button>
             </div>
         </div>
