--- a/Carflix/Views/Cep/_CepResultado.cshtml
+++ b/Carflix/Views/Cep/_CepResultado.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model != null)
 {
-    <form asp-controller="ConsultaCep" asp-action="CadastrarCep"
+    <form asp-controller="Cep" asp-action="CadastrarCep"
           method="POST"
           data-ajax-method="POST"
           data-ajax="true"
