--- a/Carflix/Views/Cep/Index.cshtml
+++ b/Carflix/Views/Cep/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<form asp-controller="ConsultaCep" asp-action="Consultar"
+<form asp-controller="Cep" asp-action="Consultar"
       method="get"
       data-ajax-method="GET"
       data-ajax="true"
